<resources>
    <string name="app_name">Medicolite</string>
    <string name="dontHaveAccount">Don\'t have an Account?</string>
    <string name="HaveAccount">Already have an Account?</string>
    <string name="passwordHint">Password</string>
    <string name="emailHint">Email</string>
    <string name="loginButton">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_label">Email</string>
    <string name="name_label">Name</string>
    <string name="dob_label">DOB</string>
    <string name="gender_label">Gender</string>
    <string name="phone_number_label">Phone Number</string>
    <string name="location_label">Location</string>
    <string name="my_profile_label">My Profile</string>
    <string name="save_button_label">Save</string>
    <string name="speciality_label">Speciality</string>
    <string name="timing_label">Timing</string>
    <string name="working_days_label">Working Days</string>
    <string name="add_new_time_button">Add New Time</string>
    <string name="save_time_button">Save</string>
    <string name="NotAuthorisedSignin">Not authorised. Please select Appropriate user type</string>
    <string name="permission_denied">We need you to grant permission for Location</string>
    <string name="permission_denied_permanently">To use this feature you have to enable permission in settings</string>
    <string name="permission_title">Permission request</string>
    <string name="incoming_meeting_invitation">Incoming Meeting Invitation</string>
    <string name="accept_meeting">Accept Meeting</string>
    <string name="reject_meeting">Reject Meeting</string>
    <string name="sending_meeting_invitation">Sending Meeting Invitation</string>
    <string name="navigation_drawer_open">Drawer open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>
    <string name="meeting_type_image">Meeting type image</string>
    <string name="caller_name">Caller name</string>
    <string name="caller_email">caller@email.com</string>
    <string name="good_morning">Good Morning</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="good_evening">Good Evening</string>
    <string name="completeAppointmentMessage">Do you want to change the status of this appointment to \"Complete\"?</string>
    <string name="Appointment_complete_title">Complete Appoinment</string>
    <string name="resend_email_verification">Resend Email Verification</string>
    <string name="verification_tooltip">Check your Email for Verification link or Send a new verification link.</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pulvinar leo vehicula pulvinar sollicitudin. Vestibulum scelerisque aliquam nisl, id pretium orci elementum non. Vestibulum cursus consectetur augue, in fringilla velit semper at. Nulla accumsan turpis ac magna tincidunt tincidunt. Aliquam scelerisque leo a mi fermentum, in rhoncus nunc rhoncus. Aenean neque tellus, iaculis faucibus interdum et, mollis at enim. Suspendisse et orci quis lectus cursus venenatis in ac nisi.</string>
    <string-array name="Genders">
        <item>Male</item>
        <item>Female</item>
        <item>Non-Binary</item>
    </string-array>
    <string-array name="Specialities">
        <item>Family Physician</item>
        <item>Anesthesiologist</item>
        <item>Cardiologist</item>
        <item>Dermatologist</item>
        <item>Endocrinologist</item>
        <item>Gastroenterologist</item>
        <item>Infectious Disease Physician</item>
        <item>Internal Medicine Physician</item>
        <item>Nephrologist</item>
        <item>Neurologist</item>
        <item>Obstetrician/Gynecologist (OB/GYN)</item>
        <item>Oncologist</item>
        <item>Ophthalmologist</item>
        <item>Other</item>
        <item>Otolaryngologist</item>
        <item>Pediatrician</item>
        <item>Physician Executive</item>
        <item>Psychiatrist</item>
        <item>Pulmonologist</item>
        <item>Radiologist</item>
        <item>Surgeon</item>
    </string-array>
    <string name="tfe_ic_camera_error" translation_description="Error regarding camera support[CHAR_LIMIT=40]">This device doesn\'t support Camera2 API.</string>
    <string name="tfe_ic_gpu_quant_error" translation_description="Error regarding GPU support for Quant models[CHAR_LIMIT=60]">GPU does not yet supported quantized models.</string>
    <string name="tfe_ic_model" translatable="false">Model:</string>
    <string-array name="tfe_ic_models" translatable="false">
        <item>Quantized_EfficientNet</item>
        <item>Float_EfficientNet</item>
        <item>Quantized_MobileNet</item>
        <item>Float_MobileNet</item>
    </string-array>
    <string name="tfe_ic_device" translatable="false">Device: </string>
    <string name="confidence">Confidence : </string>
    <string name="disease">Disease : </string>
    <string name="Generic_test">Generic Empty</string>
    <string name="no_record_found">No Records Found</string>
    <string name="prescription">Prescription</string>
    <string name="patient_name">"Patient name : "</string>
    <string name="prescription_hint">Prescription..</string>
    <string name="prescription_dialog_title">Add Prescription</string>
    <string-array name="tfe_ic_devices" translatable="false">
        <item>CPU</item>
        
        <item>GPU</item>
    </string-array>
    <string name="body_mass_index">Body Mass Index</string>
    <string name="heart_rate">Heart Rate Calculator</string>
    <string name="heart_rate_calculator">Heart Rate Calculator</string>
    <string name="bmi_title">BMI VALUES</string>
    <string name="underweight">Underweight:</string>
    <string name="underweight_value">less than 18.5</string>
    <string name="normal">Normal:</string>
    <string name="normal_value">between 18.5 and 24.9</string>
    <string name="overweight">Overweight:</string>
    <string name="overweight_value">between 25 and 29.9</string>
    <string name="obese">Obese:</string>
    <string name="obese_value">30 or greater</string>
    <string name="bmi_in_pound_inches">BMI In Pound\/Inches</string>
    <string name="bmi_in_kg_meters">BMI In Kilogram\/Meters</string>
    <string name="hint_weight_in_pound">Enter your Weight in Pound</string>
    <string name="hint_weight_in_kg">Enter your Weight in Kg</string>
    <string name="hint_height_in_inches">Enter your Height in Inches</string>
    <string name="hint_height_in_meters">Enter your Height in Meters</string>
    <string name="calculate">Show Result</string>
    <string name="display_result">Your Body Mass Index (BMI) is: %.2f</string>
    <string name="disclaimer">Disclaimer:</string>
    <string name="disclaimer_detail">Always consult a Physician or a qualified health-care
        professional before beginning or modifying your exercise program.</string>
    <string name="show_heart_rate">Show Details</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="date_of_birth_not_set">Not Set</string>
    <string name="date_picker_title">Set Date Of Birth</string>
    <string name="first_name_label">First Name:</string>
    <string name="target_heart_rate_label">Target Heart Rate Range:</string>
    <string name="maximum_heart_rate_label">Maximum Heart Rate (per minute):</string>
    <string name="date_of_birth_label">Date of Birth:</string>
    <string name="last_name_label">Last Name:</string>
    <string name="age_label">Age (in years):</string>
    <string name="maximum">%d per minute</string>
    <string name="years">%1$d Years</string>
    <string name="target_heart_rate">Your target heart rate range is %d - %d</string>
    <string name="show_health_tip">Show Health Tips</string>
    <string name="note_one">It is recommended that you exercise within 50 to 85 percent of your maximum heart rate for at least 20 to 30 minutes to get the best results from aerobic exercise. The Maximum Heart Rate (MHR) is the upper limit of what your cardiovascular system can handle during physical activity.</string>
    <string name="note_three">Heart Rate Training Zones</string>
    <string name="note_two">Note: Target Heart Rate is a range that\'s 50 - 80% of your Maximum Heart Rate. [These formulas varies and are estimates provided by American Heart Association (AHA). Maximum and Target Heart Rates may vary based on the health, fitness and gender of the individual.</string>
    <string name="how_to_check_heart_rate">How to Check Your Heart Rate</string>
    <string name="how_to_check_heart_rate_detail">Right after you stop exercising, take your pulse: Placethe tips of your first two fingers lightly over one of the blood vessels on your neck, just to the left or right of your Adam\'s apple. Or try the pulse spot inside your wrist just below the base of your thumb.\\n Count your pulse for 10 seconds and multiply the number by 6.</string>
    <string name="heart_rate_training_zones">Your heart rate training zone is a critical element in exercise. You must train at a variety of different heart rates in order to stimulate your body to improve your fitness level.</string>
    <string name="heart_rate_label">Heart Rate</string>
    <string name="effort">Effort</string>
    <string name="effect">Effect</string>
    <string name="health_tip">Health Tips</string>
    <string name="copy_right_stuff">Copy right</string>
    <string name="zone_five">171 - 190</string>
    <string name="very_hard">Very hard</string>
    <string name="zone_five_effect">Performance Redline Zone</string>
    <string name="zone_five_effort">90 - 100%</string>
    <string name="zone_five_effect_sub">Develops maximum performance and speed</string>
    <string name="zone_four">152 - 171</string>
    <string name="hard">Hard</string>
    <string name="zone_four_effort">80 - 90%</string>
    <string name="zone_four_effect">Threshold Zone</string>
    <string name="zone_four_effect_sub">Increase maximum performance capacity</string>
    <string name="zone_three">133 - 152</string>
    <string name="moderate">Moderate</string>
    <string name="zone_three_effort">70 -80%</string>
    <string name="zone_three_effect">Aerobic Zone</string>
    <string name="zone_three_effect_sub">Improve aerobic fitness</string>
    <string name="zone_two">114 - 133</string>
    <string name="light">Light</string>
    <string name="zone_two_effort">60 - 70%</string>
    <string name="zone_two_effect">Temperate Zone</string>
    <string name="zone_two_effect_sub">Improves basic endurance and fat burning</string>
    <string name="zone_one">95 - 114</string>
    <string name="very_light">Very Light</string>
    <string name="zone_one_effort">50 - 60%</string>
    <string name="zone_one_effect">Healthy Heart Zone</string>
    <string name="zone_one_effect_sub">Improves overall health and helps recovery</string>
    <string name="copy_right_content">This is to inform user that content of this app are not personal opinion. Rather they were gotten from sites like https://www.cancer.org and also from https://www.lifespanfitness.com</string>
    <string name="zone_one_heading">Zone 1 - Healthy Heart Zone: 50% - 60% of your Max Heart Rate</string>
    <string name="zone_one_subtitle">Easiest, Most Comfortable Zone</string>
    <string name="zone_one_content">Body fat decreases, blood pressure lowered, cholesterol lowered, muscle mass improvements, decreased risk for degenerative diseases, safety high.</string>
    <string name="exercise_benefits">Exercise Benefits</string>
    <string name="zone_two_heading">Zone 2 - Temperate Zone: 60% - 70% of your Max Heart Rate</string>
</resources>