<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#FFFFFF"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="2">

        <ImageView
            android:id="@+id/imageViewHistoryImage"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_weight="0"
            android:contentDescription="TODO"
            tools:ignore="ContentDescription,HardcodedText" />


        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:padding="10dp"
            app:alignContent="space_around"
            app:alignItems="flex_start"
            app:flexWrap="wrap">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textViewHistoryDiseaseNameLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/disease"
                    android:textColor="@color/darkGray"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewHistoryDiseaseName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/textViewHistoryDiseaseNameLabel"
                    android:fontFamily="@font/roboto"
                    android:text="@string/Generic_test"
                    android:textColor="@color/darkGray"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textViewHistoryDiseaseConfidenceLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/confidence"
                    android:textColor="@color/darkGray"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewHistoryDiseaseConfidence"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/textViewHistoryDiseaseConfidenceLabel"
                    android:fontFamily="@font/roboto"
                    android:text="@string/Generic_test"
                    android:textColor="@color/darkGray"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <TextView
                android:id="@+id/textViewHistoryDateTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:fontFamily="@font/roboto"
                android:text="@string/Generic_test"
                android:textColor="#E6222222"
                android:textSize="16sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_baseline_event_24" />


        </com.google.android.flexbox.FlexboxLayout>

       <!-- <ImageButton
            android:id="@+id/imageButtonHistoryViewMore"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:adjustViewBounds="false"
            android:backgroundTint="#039BE5"
            android:cropToPadding="false"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:srcCompat="@drawable/ic_baseline_chevron_right_24" />-->


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>